<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ededed"
    android:orientation="vertical" >

    <TextView
        android:visibility="gone"
        android:id="@+id/connect_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_state"
        android:textColor="#8c8793"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_button_SetDeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_selector"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/button_SetDeviceName"
            android:textColor="@drawable/button_text_selector"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/start_edit_SetDeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="2"
            android:maxLength="20"
            android:text="@string/edit_SetDeviceName"
            android:textColor="#610fD0"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetDeviceName_tips"
        android:textColor="#ffff0000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="P0.4 ADC:"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/adc_p04"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textColor="#610fD0"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltage"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/voltage_p04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textColor="#610fD0"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="P0.5 ADC:"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/adc_p05"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textColor="#610fD0"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltage"
            android:textColor="#ff000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/voltage_p05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textColor="#610fD0"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="10dip" >

        <SeekBar
            android:id="@+id/seekBar_pwmvalue"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:progress="125"
            android:secondaryProgress="255" />

        <TextView
            android:id="@+id/start_txt_SetPWM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:maxLength="8"
            android:text="@string/set_pwm"
            android:textColor="#610fD0"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_button_SetPwm"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_selector"
            android:text="@string/start_button_SetPwm"
            android:textColor="@drawable/button_text_selector"
            android:textSize="12sp" />

        <Button
            android:id="@+id/stop_button_SetPwm"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_selector"
            android:text="@string/stop_button_SetPwm"
            android:textColor="@drawable/button_text_selector"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/led1_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_led_red"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LED0"
                android:textColor="#ffff0000" />
        </LinearLayout>

        <View
            android:layout_width="0dip"
            android:layout_height="1dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/led2_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_led_green"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LED1"
                android:textColor="#ffff0000" />
        </LinearLayout>

        <View
            android:layout_width="0dip"
            android:layout_height="1dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/led3_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_led_blue"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LED2"
                android:textColor="#ffff0000" />
        </LinearLayout>

        <View
            android:layout_width="0dip"
            android:layout_height="1dip"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/relay_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@drawable/relays"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relay"
                android:textColor="#ffff0000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_temperature"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/temperature"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:text="@string/txt_temperature"
            android:textColor="#ff0000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_humidity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:drawableLeft="@drawable/humidity"
            android:drawablePadding="10dip"
            android:gravity="center"
            android:text="@string/txt_humidity"
            android:textColor="#610fD0"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/dht11_ds18b20"
        android:textColor="#610fD0"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/board_info_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board_info_log"
            android:textColor="#610fD0"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/board_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:background="@drawable/button_pressed"
            android:gravity="center"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:textColor="#ffffffff"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>